/*
 * Copyright 2023 CloudWeGo Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option go_package = "echopb";

package echopb;

service TestService {
  rpc Unary (EchoClientRequest) returns (EchoClientResponse) {}
  rpc EchoBidi (stream EchoClientRequest) returns (stream EchoClientResponse){}
  rpc EchoClient (stream EchoClientRequest) returns (EchoClientResponse){}
  rpc EchoServer (EchoClientRequest) returns (stream EchoClientResponse){}
}

service EmptyService {

}

message EchoClientRequest {
  string message = 1;
}

message EchoClientResponse {
  string message = 1;
}

